--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ SOFTWARE.
                     <a aria-label="Change website colors to dark mode." role="button" onclick="changeToDarkMode()" id="darkmode">
                         <img alt="Icon showing a moon for changing the website to dark mode." src="assets/img/icons/moon.svg" style="width: min(20px, 10%);" id="dark" class="changeableColor">
                     </a>
-                    <p id="translationauthor" style="font-size: 15px; display: none; margin: 0px">翻訳： <a class="changeableColor" href="https://www.fiverr.com/qulitrans">Qulitrans Team</a></p>
+                    <p id="translationauthor" style="font-size: 15px; display: none; margin: 0px">翻訳： Qulitrans Team</p>
                 </div>
             </div>
             <!--Available languages and modes' section-->
@@ -701,6 +701,16 @@ SOFTWARE.
         <div class="container text-justified" style="margin-top: 3vh">
             <details style="font-size: 75%;">
                 <summary id="updates" style="font-size: 140%;">Updates</summary>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post27" style="margin: 0px">21-12-2024 - What could this gear be for...?</p>
+
+                <p aria-label="Symbol for the extra category. It is an orange cross with 4 dots close to each angle of the cross. The symbol and the dots have a darker orange shadow and a orange creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/extra.svg" width="40vw">
+                </p>
+                <p id="post26" style="margin: 0px">19-12-2024 - Tap&Hold allows anyone to play Trom with just one input!</p>
 
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
