--- a/index.html
+++ b/index.html
@@ -705,7 +705,12 @@ SOFTWARE.
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
-                <p id="post27" style="margin: 0px">24-12-2024 - Look at all those Mibos moving!</p>
+                <p id="post29" style="margin: 0px">26-12-2024 - Boto can even dissapear from the grid! But why...</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post28" style="margin: 0px">24-12-2024 - Look at all those Mibos moving!</p>
 
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
