--- a/index.html
+++ b/index.html
@@ -705,6 +705,11 @@ SOFTWARE.
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
+                <p id="post36" style="margin: 0px">08-04-2025 - 👀👀</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
                 <p id="post36" style="margin: 0px">11-01-2025 - Push and go!</p>
 
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
@@ -970,7 +975,7 @@ SOFTWARE.
                         <h4 id="socials">Socials</h4>
                         
                         <!--rss-->
-                        <a aria-label="Link to Abendiix's RSS." href="" target="_blank" id="rsslink">
+                        <a aria-label="Link to Abendiix's RSS." href="https://abendiix.com/rss.xml" target="_blank" id="rsslink">
                             <img alt="RSS icon in black (clear mode) that redirects to Abendiix's RSS."
                             src="assets/img/icons/rss.svg" style="margin: 5px; width: 35px" id="rss" class="changeableColor"></a>
                         <!--rss-->
