Change Updates section to only show it if language is English

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ SOFTWARE.
         <!--Presskits-->
 
         <!--Updates-->
-        <div class="container text-justified" style="margin-top: 3vh">
+        <div id="updatessection" class="container text-justified" style="margin-top: 3vh">
             <details style="font-size: 75%;">
                 <summary id="updates" style="font-size: 140%;">Updates</summary>
 
