--- a/index.html
+++ b/index.html
@@ -702,8 +702,8 @@ SOFTWARE.
             <details style="font-size: 75%;">
                 <summary id="updates" style="font-size: 140%;">Updates</summary>
 
-                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
-                    <img src="assets/img/icons/preview.svg" width="40vw">
+                <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/release.svg" width="40vw">
                 </p>
                 <p id="post45" style="margin: 0px">19-04-2025 - BOTO LABO's steam page is now public! You can wishlist BOTO LABO right now!</p>
 
