--- a/index.html
+++ b/index.html
@@ -702,6 +702,11 @@ SOFTWARE.
             <details style="font-size: 75%;">
                 <summary id="updates" style="font-size: 140%;">Updates</summary>
 
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post46" style="margin: 0px">20-04-2025 - What may these buttons do...? Hint: BOTO LABO is a Sokoban game with some twists from the Puzzle genre!</p>
+
                 <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/release.svg" width="40vw">
                 </p>
