Post 49 - New templates!

--- a/index.html
+++ b/index.html
@@ -705,6 +705,11 @@ SOFTWARE.
                 <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/update.svg" width="40vw">
                 </p>
+                <p id="post49" style="margin: 0px">08-05-2025 - Templates updated! They will now take less space and be more quick, improving the quality of every post and the watcher's experience!</p>
+
+                <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/update.svg" width="40vw">
+                </p>
                 <p id="post48" style="margin: 0px">07-05-2025 - Working on new designs for the templates!</p>
 
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
