--- a/index.html
+++ b/index.html
@@ -705,7 +705,12 @@ SOFTWARE.
                 <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/update.svg" width="40vw">
                 </p>
-                <p id="post50" style="margin: 0px">09-05-2025 - Just a week away from #Guadalindie25 and day 1 of preparing an arcade so you can try BOTO LABO in the most retro style!</p>
+                <p id="post51" style="margin: 0px">10-05-2025 - Only 6 days left for Guadalindie 2025 and only 6 days left to get one of these spinning keychains!</p>
+
+                <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/update.svg" width="40vw">
+                </p>
+                <p id="post50" style="margin: 0px">09-05-2025 - Just a week away from Guadalindie 2025 and day 1 of preparing an arcade so you can try BOTO LABO in the most retro style!</p>
 
                 <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/update.svg" width="40vw">
