--- a/index.html
+++ b/index.html
@@ -705,6 +705,11 @@ SOFTWARE.
                 <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/update.svg" width="40vw">
                 </p>
+                <p id="post53" style="margin: 0px">12-05-2025 - Come by our stand at Guadalindie 2025 and get some free stickers!</p>
+
+                <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/update.svg" width="40vw">
+                </p>
                 <p id="post52" style="margin: 0px">11-05-2025 - Just 5 more days for Guadalindie 2025 and day 2 of preparing an arcade so you can try BOTO LABO in the most retro style!</p>
 
                 <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
